scheduler internal stuff
